# api/swagger.yaml
@@ -1,196 +1,189 @@
----
-swagger: "2.0"
+swagger: '2.0'
 info:
-  description: "This is a sample server Petstore server.  You can find out more about\
-    \     Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net,\
-    \ #swagger](http://swagger.io/irc/).      For this sample, you can use the api\
-    \ key `special-key` to test the authorization     filters."
-  version: "1.0.0"
-  title: "API Connector Management"
-  termsOfService: "http://swagger.io/terms/"
+  description: >-
+    This is a sample server Petstore server.  You can find out more about    
+    Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net,
+    #swagger](http://swagger.io/irc/).      For this sample, you can use the api
+    key `special-key` to test the authorization     filters.
+  version: 1.0.0
+  title: API Connector Management
+  termsOfService: 'http://swagger.io/terms/'
   contact:
-    email: "apiteam@swagger.io"
+    email: apiteam@swagger.io
   license:
-    name: "Apache 2.0"
-    url: "http://www.apache.org/licenses/LICENSE-2.0.html"
-host: "api.smartcity.kmitl.io"
-basePath: "/api/v1"
+    name: Apache 2.0
+    url: 'http://www.apache.org/licenses/LICENSE-2.0.html'
+host: api.smartcity.kmitl.io
+basePath: /api/v1
 tags:
-- name: "data"
-  description: "API Connector Data's Management"
-  externalDocs:
-    description: "Find out more"
-    url: "http://swagger.io"
-- name: "user"
-  description: "API Connector User's Management"
-  externalDocs:
-    description: "Find out more"
-    url: "http://swagger.io"
+  - name: data
+    description: API Connector Data's Management
+    externalDocs:
+      description: Find out more
+      url: 'http://swagger.io'
+  - name: user
+    description: API Connector User's Management
+    externalDocs:
+      description: Find out more
+      url: 'http://swagger.io'
 schemes:
-- "https"
+  - https
 paths:
   /data:
     post:
       tags:
-      - "data"
-      summary: "Create user"
-      description: "This can only be done by the logged in user."
-      operationId: "trackData"
+        - data
+      summary: Create user
+      description: This can only be done by the logged in user.
+      operationId: trackData
       produces:
-      - "application/xml"
-      - "application/json"
+        - application/xml
+        - application/json
       parameters:
-      - name: "user"
-        in: "header"
-        description: "user of a connector"
-        required: false
-        type: "string"
-      - name: "password"
-        in: "header"
-        description: "password of the user"
-        required: false
-        type: "string"
-      - name: "collectionId"
-        in: "header"
-        description: "collectionId of a collection"
-        required: false
-        type: "string"
-      - in: "body"
-        name: "data"
-        description: "Data to track"
-        required: true
-        schema:
-          $ref: "#/definitions/User"
+        - name: user
+          in: header
+          description: user of a connector
+          required: false
+          type: string
+        - name: password
+          in: header
+          description: password of the user
+          required: false
+          type: string
+        - name: collectionId
+          in: header
+          description: collectionId of a collection
+          required: false
+          type: string
+        - in: body
+          name: data
+          description: Data to track
+          required: true
+          schema:
+            $ref: '#/definitions/User'
       responses:
         default:
-          description: "successful operation"
-      x-swagger-router-controller: "Data"
+          description: successful operation
+      x-swagger-router-controller: Data
   /user:
     post:
       tags:
-      - "user"
-      summary: "Create user"
-      description: "This can only be done by the logged in user."
-      operationId: "createUser"
+        - user
+      summary: Create user
+      description: This can only be done by the logged in user.
+      operationId: createUser
       produces:
-      - "application/xml"
-      - "application/json"
+        - application/xml
+        - application/json
       parameters:
-      - in: "body"
-        name: "body"
-        description: "Created user object"
-        required: true
-        schema:
-          $ref: "#/definitions/User"
+        - in: body
+          name: body
+          description: Created user object
+          required: true
+          schema:
+            $ref: '#/definitions/User'
       responses:
         default:
-          description: "successful operation"
-      x-swagger-router-controller: "User"
-  /user/{username}:
+          description: successful operation
+      x-swagger-router-controller: User
+  '/user/{username}':
     get:
       tags:
-      - "user"
-      summary: "Get user by user name"
-      description: ""
-      operationId: "getUserByName"
+        - user
+      summary: Get user by user name
+      description: ''
+      operationId: getUserByName
       produces:
-      - "application/xml"
-      - "application/json"
+        - application/xml
+        - application/json
       parameters:
-      - name: "username"
-        in: "path"
-        description: "The name that needs to be fetched. Use user1 for testing. "
-        required: true
-        type: "string"
+        - name: username
+          in: path
+          description: 'The name that needs to be fetched. Use user1 for testing. '
+          required: true
+          type: string
       responses:
-        200:
-          description: "successful operation"
+        '200':
+          description: successful operation
           schema:
-            $ref: "#/definitions/User"
-        400:
-          description: "Invalid username supplied"
-        404:
-          description: "User not found"
-      x-swagger-router-controller: "User"
+            $ref: '#/definitions/User'
+        '400':
+          description: Invalid username supplied
+        '404':
+          description: User not found
+      x-swagger-router-controller: User
     put:
       tags:
-      - "user"
-      summary: "Updated user"
-      description: "This can only be done by the logged in user."
-      operationId: "updateUser"
+        - user
+      summary: Updated user
+      description: This can only be done by the logged in user.
+      operationId: updateUser
       produces:
-      - "application/xml"
-      - "application/json"
+        - application/xml
+        - application/json
       parameters:
-      - name: "username"
-        in: "path"
-        description: "name that need to be updated"
-        required: true
-        type: "string"
-      - in: "body"
-        name: "body"
-        description: "Updated user object"
-        required: true
-        schema:
-          $ref: "#/definitions/User"
+        - name: username
+          in: path
+          description: name that need to be updated
+          required: true
+          type: string
+        - in: body
+          name: body
+          description: Updated user object
+          required: true
+          schema:
+            $ref: '#/definitions/User'
       responses:
-        400:
-          description: "Invalid user supplied"
-        404:
-          description: "User not found"
-      x-swagger-router-controller: "User"
+        '400':
+          description: Invalid user supplied
+        '404':
+          description: User not found
+      x-swagger-router-controller: User
     delete:
       tags:
-      - "user"
-      summary: "Delete user"
-      description: "This can only be done by the logged in user."
-      operationId: "deleteUser"
+        - user
+      summary: Delete user
+      description: This can only be done by the logged in user.
+      operationId: deleteUser
       produces:
-      - "application/xml"
-      - "application/json"
+        - application/xml
+        - application/json
       parameters:
-      - name: "username"
-        in: "path"
-        description: "The name that needs to be deleted"
-        required: true
-        type: "string"
+        - name: username
+          in: path
+          description: The name that needs to be deleted
+          required: true
+          type: string
       responses:
-        400:
-          description: "Invalid username supplied"
-        404:
-          description: "User not found"
-      x-swagger-router-controller: "User"
+        '400':
+          description: Invalid username supplied
+        '404':
+          description: User not found
+      x-swagger-router-controller: User
 securityDefinitions:
   petstore_auth:
-    type: "oauth2"
-    authorizationUrl: "http://petstore.swagger.io/oauth/dialog"
-    flow: "implicit"
+    type: oauth2
+    authorizationUrl: 'http://petstore.swagger.io/oauth/dialog'
+    flow: implicit
     scopes:
-      write:pets: "modify pets in your account"
-      read:pets: "read your pets"
+      'write:pets': modify pets in your account
+      'read:pets': read your pets
   api_key:
-    type: "apiKey"
-    name: "api_key"
-    in: "header"
+    type: apiKey
+    name: api_key
+    in: header
 definitions:
   User:
-    type: "object"
+    type: object
     properties:
-      id:
-        type: "integer"
-        format: "int64"
       username:
-        type: "string"
+        type: string
       password:
-        type: "string"
-      connectorName:
-        type: "string"
-      userStatus:
-        type: "integer"
-        format: "int32"
-        description: "User Status"
+        type: string
+      connectorId:
+        type: string
     xml:
-      name: "User"
+      name: User
 externalDocs:
-  description: "Find out more about Swagger"
-  url: "http://swagger.io"
+  description: Find out more about Swagger
+  url: 'http://swagger.io'
